# trajectory-verification-system

./: .gitignore  .repository-initialized  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EXPERIMENTS.md  EXTERNAL_MODELS.md  MOTION_PREDICTIONS.md  RISK_CONTEXT.md  ROADMAP.md  WOMD_SETUP.md
examples/: following_scenario.json  full_shard_experiment.json  prediction_comparison_policy.json  requirements.json  womd_map_requirements.json  womd_requirements.json
examples/regression/: baseline_manifest.json  candidate_manifest.json  policy.json  requirements.json
schemas/: external_predictions.schema.json
src/trajectory_verification/: __init__.py  baseline_cli.py  baselines.py  cli.py  evidence.py  experiment.py  experiment_cli.py  external_prediction_cli.py  io.py  map_metrics.py  metrics.py  models.py  motion_evaluate_cli.py  prediction_compare_cli.py  prediction_comparison.py  prediction_metrics.py  prediction_reporting.py  prediction_risk_cli.py  predictions.py  regression.py  womd_cli.py  (+9 more)
tests/: test_baselines.py  test_evidence.py  test_experiment.py  test_external_predictions.py  test_map_metrics.py  test_metrics.py  test_models.py  test_motion_evaluate_cli.py  test_motion_submission.py  test_prediction_compare_cli.py  test_prediction_comparison.py  test_prediction_metrics.py  test_prediction_reporting.py  test_regression.py  test_regression_cli.py  test_regression_io.py  test_reporting.py  test_requirements.py  test_risk_analysis.py  test_selectors.py  test_visualization.py  test_womd_adapter.py  test_womd_verify_cli.py
(+8 files in other folders)
