[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectory-verification-system"
version = "0.1.0"
description = "Requirements-driven trajectory verification and failure attribution"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Temiloluwa Adesola" }]
dependencies = ["protobuf>=4.25,<7"]

[project.scripts]
verify-trajectories = "trajectory_verification.cli:main"
inspect-womd = "trajectory_verification.womd_cli:main"
verify-womd = "trajectory_verification.womd_verify_cli:main"
compare-trajectories = "trajectory_verification.regression_cli:main"
evaluate-motion-predictions = "trajectory_verification.motion_evaluate_cli:main"
generate-womd-baseline = "trajectory_verification.baseline_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
